Disable source cache
Signed-off-by: Aaron Sutula <hi@asutula.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -315,18 +315,18 @@ jobs:
     shell: /bin/bash --login -o pipefail
 
     steps:
-      - restore_cache: # If any cache exists, it'll way speedup these checkouts
-          keys:
-            - source-v2-{{ arch }}-{{ .Branch }}-{{ .Revision }}
-            - source-v2-{{ arch }}-{{ .Branch }}-
-            - source-v2-{{ arch }}-
+      # - restore_cache: # If any cache exists, it'll way speedup these checkouts
+      #     keys:
+      #       - source-v2-{{ arch }}-{{ .Branch }}-{{ .Revision }}
+      #       - source-v2-{{ arch }}-{{ .Branch }}-
+      #       - source-v2-{{ arch }}-
 
       - checkout
 
-      - save_cache:
-          key: source-v2-{{ arch }}-{{ .Branch }}-{{ .Revision }}
-          paths:
-            - '.git'
+      # - save_cache:
+      #     key: source-v2-{{ arch }}-{{ .Branch }}-{{ .Revision }}
+      #     paths:
+      #       - '.git'
 
       - run:
           name: set Ruby version
@@ -356,17 +356,17 @@ jobs:
           name: Write .env
           command: ./scripts/create-rn-env.sh
 
-      - restore_cache:
-          key: bundle-v1-{{ checksum "ios/Gemfile.lock" }}-{{ arch }}
+      # - restore_cache:
+      #     key: bundle-v1-{{ checksum "ios/Gemfile.lock" }}-{{ arch }}
 
       - run:
           command: bundle install
           working_directory: ios
 
-      - save_cache:
-          key: bundle-v1-{{ checksum "ios/Gemfile.lock" }}-{{ arch }}
-          paths:
-            - vendor/bundle
+      # - save_cache:
+      #     key: bundle-v1-{{ checksum "ios/Gemfile.lock" }}-{{ arch }}
+      #     paths:
+      #       - vendor/bundle
 
       - run:
           command: bundle install
