--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -397,28 +397,17 @@ jobs:
           name: set Ruby version
           command: echo "ruby-2.4" > ~/.ruby-version
 
-      - restore_cache: # If any cache exists, it'll way speedup these checkouts
-          keys:
-            - source-v2-{{ arch }}-{{ .Branch }}-{{ .Revision }}
-            - source-v2-{{ arch }}-{{ .Branch }}-
-            - source-v2-{{ arch }}-
-
       - checkout
-
-      - save_cache:
-          key: source-v2-{{ arch }}-{{ .Branch }}-{{ .Revision }}
-          paths:
-            - '.git'
 
       - restore_cache:
           key: yarn-v1-{{ checksum "yarn.lock" }}-{{ arch }}
 
       - restore_cache:
-          key: node-v1-{{ checksum "package.json" }}-{{ arch }}
+          key: node-v1-{{ checksum "yarn.lock" }}-{{ arch }}
 
       # not using a workspace here as Node and Yarn versions
       # differ between our macOS executor image and the Docker containers above
-      - run: yarn install --ignore-engines
+      - run: yarn install
 
       - save_cache:
           key: yarn-v1-{{ checksum "yarn.lock" }}-{{ arch }}
@@ -426,7 +415,7 @@ jobs:
             - ~/.cache/yarn
 
       - save_cache:
-          key: node-v1-{{ checksum "package.json" }}-{{ arch }}
+          key: node-v1-{{ checksum "yarn.lock" }}-{{ arch }}
           paths:
             - node_modules
 
@@ -490,7 +479,7 @@ jobs:
           key: yarn-v1-{{ checksum "yarn.lock" }}-{{ arch }}
 
       - restore_cache:
-          key: node-v1-{{ checksum "package.json" }}-{{ arch }}
+          key: node-v1-{{ checksum "yarn.lock" }}-{{ arch }}
 
       # not using a workspace here as Node and Yarn versions
       # differ between our macOS executor image and the Docker containers above
@@ -502,7 +491,7 @@ jobs:
             - ~/.cache/yarn
 
       - save_cache:
-          key: node-v1-{{ checksum "package.json" }}-{{ arch }}
+          key: node-v1-{{ checksum "yarn.lock" }}-{{ arch }}
           paths:
             - node_modules
 
