--- a/ios/Podfile
+++ b/ios/Podfile
@@ -28,7 +28,8 @@ target 'Textile' do
   pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
 
   # your other libraries will follow here!
-  pod 'Firebase/Analytics', '5.20.2'
+  pod 'Firebase', '5.18.0'
+  pod 'Firebase/Analytics', '5.18.0'
   pod 'textile-react-native-sdk', :path => '../node_modules/@textile/react-native-sdk'
   pod 'RNReanimated', :path => '../node_modules/react-native-reanimated'
   pod 'RNFirebase', :path => '../node_modules/react-native-firebase/ios'
