--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -173,6 +173,9 @@ android {
         sourceCompatibility 1.8
         targetCompatibility 1.8
     }
+	dexOptions {
+        javaMaxHeapSize "4g"
+    }
 }
 
 dependencies {
