adds react-native-keyboard component and embeds a photo picker
Signed-off-by: andrew <andrew@textile.io>

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -179,6 +179,7 @@ android {
 }
 
 dependencies {
+    implementation project(":reactnativekeyboardinput")
     implementation project(':react-native-firebase')
     implementation project(':react-native-reanimated')
     implementation 'com.android.support:multidex:1.0.3'
