--- a/package.json
+++ b/package.json
@@ -12,15 +12,12 @@
     "@textile/react-native-camera-roll": "1.1.6",
     "@textile/react-native-icon": "^1.0.0",
     "@textile/react-native-sdk": "3.0.6",
-    "@textile/redux-saga-wait-for": "1.0.1",
-    "apisauce": "^1.0.2",
     "moment": "^2.22.2",
     "prop-types": "^15.6.2",
     "react": "16.6.3",
     "react-native": "0.58.6",
     "react-native-actionsheet": "^2.4.2",
     "react-native-background-fetch": "^2.4.3",
-    "react-native-background-timer": "2.1.0-alpha.6",
     "react-native-config": "^0.11.7",
     "react-native-contacts": "^3.1.2",
     "react-native-easy-toast": "1.2.0",
@@ -31,6 +28,7 @@
     "react-native-hyperlink": "0.0.14",
     "react-native-image-pan-zoom": "^2.1.11",
     "react-native-image-picker": "^0.28.1",
+    "react-native-keyboard-input": "5.3.1",
     "react-native-modal": "^6.5.0",
     "react-native-progress": "^3.6.0",
     "react-native-push-notification": "^3.1.1",
@@ -55,7 +53,6 @@
     "@types/jest": "^24.0.11",
     "@types/react": "^16.4.15",
     "@types/react-native": "^0.57.58",
-    "@types/react-native-background-timer": "^2.0.0",
     "@types/react-native-fs": "^2.8.2",
     "@types/react-native-push-notification": "^3.0.3",
     "@types/react-native-qrcode": "^0.2.2",
