--- a/ios/Textile.xcodeproj/xcshareddata/xcschemes/Textile.xcscheme
+++ b/ios/Textile.xcodeproj/xcshareddata/xcschemes/Textile.xcscheme
@@ -117,6 +117,11 @@
          <EnvironmentVariable
             key = "OS_ACTIVITY_MODE"
             value = "disable"
+            isEnabled = "NO">
+         </EnvironmentVariable>
+         <EnvironmentVariable
+            key = "OS_ACTIVITY_MODE"
+            value = ""
             isEnabled = "YES">
          </EnvironmentVariable>
       </EnvironmentVariables>
