--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,5 +13,5 @@
     "skipLibCheck": true,
     "target": "esnext"
   },
-  "exclude": ["node_modules", "coverage"]
+  "include": ["App/**/*", "typings/**/*"]
 }
